// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<section names=\\"Header 1\\">
<title>Header 1</title><paragraph>Text</paragraph><section names=\\"Header 2\\"><title>Header 2</title></section></section></document>"
`;

exports[`Emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<paragraph><emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis and inline 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<paragraph><emphasis>hello</emphasis> and <strong>goodbye</strong></paragraph></document>"
`;

exports[`Emphasis followed by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<paragraph><emphasis>hello</emphasis> test</paragraph></document>"
`;

exports[`Emphasis preceded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<paragraph>stuff <emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis surrounded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<paragraph>stuff <emphasis>hello</emphasis> things</paragraph></document>"
`;

exports[`Inline followed by emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<paragraph><strong>hello</strong> and <emphasis>goodbye</emphasis></paragraph></document>"
`;

exports[`Strong 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<paragraph><strong>hello</strong></paragraph></document>"
`;

exports[`Title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<section names=\\"Title\\">
<title>Title</title><paragraph>Paragraph.</paragraph></section><paragraph>Paragraph.</paragraph></document>"
`;
